# ChessEngine

./: .gitignore  CMakeLists.txt  README.md  build_debug.sh  build_prod.sh  learn_prod.sh  run_debug.sh  run_prod.sh
.test_bots/: our.sh  rebuild-debug.sh  rebuild.sh
.test_bots/games_played/: game-1780431131.txt
src/: ChessBot.cpp
src/Bot/: Bot.cpp  Bot.hpp
src/Engine/Learning/: Learning.hpp  LearningMutation.hpp  LearningSession.hpp
src/Engine/MCTSMoveRecommender/: MCTSMoveRecommender.hpp
src/Engine/MoveGenerator/: MoveGenerator.cpp  MoveGenerator.hpp  PawnMoves.hpp
src/Engine/MoveRecommender/: MoveOrdering.hpp  MoveRecommender.cpp  MoveRecommender.hpp  TTCache.hpp
src/Engine/OpeningTree/: OpeningTree.hpp
src/Engine/PreparedData/: PreparedData.cpp  PreparedData.hpp  Zobrist.cpp  Zobrist.hpp  magic.hpp
src/Engine/StateTransformer/: StateTransformer.cpp  StateTransformer.hpp
src/Engine/Support/: ChessMove.hpp  Consts.hpp
src/Engine/Support/GameState/: GameState.cpp  GameState.hpp  GameStateAux.hpp
src/Interface/StudiaInterface/: StudiaInterface.cpp  StudiaInterface.hpp
src/Tests/: Benchmarks.hpp
src/Utils/: BitsUtil.hpp  MathUtil.hpp  StringUtils.hpp
